Rename Flux -> Natural

--- a/UnityNaturalMCPServer/Editor/UnityFluxMCP.Editor.asmdef
+++ b/UnityNaturalMCPServer/Editor/UnityFluxMCP.Editor.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "UnityFluxMCP.Editor",
-    "rootNamespace": "UnityFluxMCP.Editor",
+    "name": "UnityNaturalMCP.Editor",
+    "rootNamespace": "UnityNaturalMCP.Editor",
     "references": [
         "UniTask"
     ],
