--- a/stdio-to-streamable-http/package.json
+++ b/stdio-to-streamable-http/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unity-flux-mcp-server",
+  "name": "unity-natural-mcp-server",
   "version": "1.0.0",
-  "description": "MCP server for Unity Flux",
+  "description": "MCP server for Unity Natural",
   "type": "module",
   "main": "index.js",
   "scripts": {
