--- a/stdio-to-streamable-http/package.json
+++ b/stdio-to-streamable-http/package.json
@@ -3,14 +3,20 @@
   "version": "1.0.0",
   "description": "MCP server for Unity Natural",
   "type": "module",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "npm install && node src/index.js"
+    "build": "tsc",
+    "start": "npm install && npm run build && node dist/index.js",
+    "dev": "tsc && node dist/index.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.1",
+    "typescript": "^5.8.3"
   }
 }
